<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#555555"
    tools:context="com.example.snakegame.components.GameActivity">

    <ImageView
        android:id="@+id/button_settings"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:src="@drawable/ic_settings"
        android:contentDescription="@string/button_to_setting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.snakegame.graphics.GameCanvas
        android:id="@+id/canvas"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintDimensionRatio="1:1" />

    <ImageButton
        android:id="@+id/button_right"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/button_to_control_snake_move_right"
        app:layout_constraintStart_toEndOf="@+id/button_up"
        app:layout_constraintTop_toBottomOf="@+id/button_up"
        app:srcCompat="?android:attr/listChoiceIndicatorSingle" />

    <ImageButton
        android:id="@+id/button_up"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="268dp"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/button_to_control_snake_move_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/canvas"
        app:srcCompat="?android:attr/listChoiceIndicatorSingle" />

    <ImageButton
        android:id="@+id/button_left"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/button_to_control_snake_move_left"
        app:layout_constraintEnd_toStartOf="@+id/button_up"
        app:layout_constraintTop_toBottomOf="@+id/button_up"
        app:srcCompat="?android:attr/listChoiceIndicatorSingle" />

    <ImageButton
        android:id="@+id/button_down"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/button_to_control_snake_move_down"
        app:layout_constraintStart_toEndOf="@+id/button_left"
        app:layout_constraintTop_toBottomOf="@+id/button_left"
        app:srcCompat="?android:attr/listChoiceIndicatorSingle" />
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="300dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>