<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#555555"
    android:padding="16dp">

    <!-- Horizontal canvases -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="50dp">

        <!-- Canvas 1 -->
        <com.example.snakegame.animations.MapView
            android:id="@+id/map_view_0"
            android:layout_width="105dp"
            android:layout_height="105dp"
            android:layout_marginEnd="15dp"
            android:background="#FF0000" />

        <!-- Canvas 2 -->
        <com.example.snakegame.animations.MapView
            android:id="@+id/map_view_1"
            android:layout_width="105dp"
            android:layout_height="105dp"
            android:layout_marginEnd="15dp"
            android:background="#00FF00" />

        <!-- Canvas 3 -->
        <com.example.snakegame.animations.MapView
            android:id="@+id/map_view_2"
            android:layout_width="105dp"
            android:layout_height="105dp"
            android:background="#0000FF" />
    </LinearLayout>
    <TextView
        android:id="@+id/highScoreTextView"
        android:layout_width="200dp"
        android:layout_height="50dp"

        android:text="@string/score_0"
        android:textSize="25sp"
        android:textColor="#FFFF00"
        android:textStyle="bold"
        android:gravity="center" />
    <!-- Vertical buttons -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/button_play"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/play"
            android:layout_marginBottom="8dp"
            />

        <Button
            android:id="@+id/button_exit"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/exit" />
    </LinearLayout>

</LinearLayout>
